# SbAudio

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  README.txt
.github/workflows/: ci.yml
cmake/: SbAudio.pc.in
include/: sb3DAudio.h  sbACT.h  sbACT3D.h  sbAPO.h  sbAPOBase.h  sbAPOFX.h  sbAudio.h  sbAudioFX.h
src/: F3DAudio.c  FACT.c  FACT3D.c  FACT_internal.c  FACT_internal.h  FAPOBase.c  FAPOFX.c  FAPOFX_echo.c  FAPOFX_eq.c  FAPOFX_masteringlimiter.c  FAPOFX_reverb.c  FAudio.c  FAudioFX_reverb.c  FAudioFX_volumemeter.c  FAudio_internal.c  FAudio_internal.h  FAudio_internal_simd.c  FAudio_operationset.c  FAudio_platform_sdl2.c  FAudio_platform_win32.c  XNA_Song.c  matrix_defaults.inl  qoa_decoder.h  stb_modified.h  stb_vorbis_modified.h
tests/: xaudio2.c
utils/facttool/: facttool.cpp
utils/showriffheader/: showriffheader.cpp
utils/testfilter/: audio.cpp  audio.h  audio_faudio.cpp  audio_player.h  audio_xaudio.cpp  oscillator.cpp  oscillator.h  testfilter.cpp
utils/testparse/: testparse.c
utils/testreverb/: audio.cpp  audio.h  audio_faudio.cpp  audio_xaudio.cpp  testreverb.cpp
utils/testvolumemeter/: audio.cpp  audio.h  audio_faudio.cpp  testvolumemeter.cpp
utils/testxwma/: testxwma.cpp
utils/uicommon/: FAudioUI_main.cpp
utils/voicepool/: voicepool.cpp
utils/wavcommon/: wavs.cpp  wavs.h
